# online_adaptation

./: .dockerignore  .gitignore  Dockerfile  README.md  autobot.md  prof.txt  prof2.txt  pyproject.toml
configs/: _logging.yaml  eval.yaml  train.yaml
configs/dataset/: cifar10.yaml  flowbot.yaml  flowbot_history.yaml  flowbot_history_tformer.yaml
configs/inference/: flowbot_artflownet.yaml
configs/model/: artflownet.yaml  artflownet_history_tformer.yaml  flowbot_history.yaml  vit.yaml
configs/training/: cifar10_vit.yaml  flowbot_artflownet.yaml  flowbot_history_flowbot_history.yaml  flowbot_history_tformer_artflownet_history_tformer.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: eval_results.ipynb  flow_history_dset.ipynb  flow_history_tformer_dset.ipynb  try_new_model.ipynb
notebooks/artifacts/run-67q84y9c-train_metric_table:v0/: train_metric_table.table.json
notebooks/artifacts/run-7dbxqi0s-train_metric_table:v0/: train_metric_table.table.json
scripts/: eval.py  train.py
src/online_adaptation/datasets/: flow_dm.py  flow_history.py  flow_history_dm.py  flow_tformer.py
src/online_adaptation/metrics/: classification.py
src/online_adaptation/models/: artflownet_history.py  flowbot3d.py  history_tformer.py
src/online_adaptation/nets/: history_nets.py  transformer-not used.py
src/online_adaptation/utils/: script_utils.py
src/python_ml_project_template/datasets/: cifar10.py
src/python_ml_project_template/models/: classifier.py
tests/: tformer_test.py  tformer_test_old.py
